Fix user popout scrollbar position

--- a/_sass/popouts/userPopout.scss
+++ b/_sass/popouts/userPopout.scss
@@ -60,6 +60,8 @@
 	}
 	%userPopoutRolesList {
 		max-height: 230px;
+		padding-right: 5px;
+		margin-right: -5px;
 		overflow-y: auto;
 	}
 	%userPopoutNote {
